fixed the z-index blocking the buttons

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -25,7 +25,7 @@
     width: 100%;
     margin: 0 auto;
     opacity: 100%;
-    z-index: 200;
+    z-index: 20;
 }
 
 /* 
